VaultLegacyBankingProject/k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-legacy-ingress-local
  labels:
    env: local
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: vault-legacy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-legacy-app
            port:
              number: 8080
